<resources>
    <string name="app_name">PlaylistMaker</string>
    <string name="title">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="dark_team">Темная тема</string>
    <string name="share_the_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="message_share_settings">https://practicum.yandex.ru/android-developer/?from=catalog</string>
    <string name="select_app">Выберите приложение</string>
    <string name="message_support_settings">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="theme_support_settings">"Сообщение разработчикам и разработчицам приложения Playlist Maker"</string>
    <string name="uri_support_setting">diyavolik007@yandex.ru</string>
    <string name="uri_agreement_setting">https://yandex.ru/legal/practicum_offer/</string>
    <string name="nothing_found">Ничего не найдено</string>
    <string name="something_went_wrong">Что то пошло не так</string>
    <string name="error_search_connection_problems">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету</string>
    <string name="error_search_nothing_found">Ничего не найдено</string>
    <string name="update">Обновить</string>
    <string name="you_find">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="country">Страна</string>
    <string name="genre">Жанр</string>
    <string name="year">Год</string>
    <string name="album">Альбом</string>
    <string name="duration">Длительность</string>
    <string name="not_found_email_application">Нет приложения для отправки email</string>
    <string name="media_library_empty">Ваша медиатека пуста</string>
    <string name="empty_playlist">Вы не добавили\nни одного трека  плейлиста</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="favourite_track">Избранные треки</string>
    <string name="playlist">Плейлисты</string>
    <string name="title_new_playlist">Название*</string>
    <string name="description_new_playlist">Описание</string>
    <string name="create">Создать</string>
    <string name="dialog_title">"Завершить создание плейлиста?"</string>
    <string name="dialog_description">"Все несохраненные данные будут потеряны"</string>
    <string name="cancel">"Отмена"</string>
    <string name="complete">"Завершить"</string>
    <string name="add_to_playlist">Добавить в плейлистов</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="track_added">Трек уже добавлен в плейлист %1$s</string>
    <string name="added_playlist">Добавлено в плейлист %1$s</string>
    <string name="playlist_detail_share">Поделиться</string>
    <string name="playlist_detail_edit">Редактировать информацию</string>
    <string name="playlist_detail_remove">Удалить плейлист</string>
    <string name="dialog_title_delete_track">"Хотите удалить трек?"</string>
    <string name="yes">"НЕТ"</string>
    <string name="no">"ДА"</string>
    <string name="playlist_empty_tracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="share_apk">Share APK</string>
    <string name="dialog_title_delete_playlist">"Хотите удалить плейлист %1$s ?"</string>
    <string name="save">Сохранить</string>
    <string name="edit">Редактировать</string>
    <string name="disabled_internet">Отсутствует подключение к интернету</string>
    <string name="no_permission">Нет разрешения POST_NOTIFICATIONS — foreground не стартуем</string>
    <string name="channel_description">Service for playing music</string>
    <string name="track_notification">Track info unavailable</string>
    <string name="without_notifications_without_background.">Без уведомлений — плеер работает, но без фона</string>
</resources>
