<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingsFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".settings.ui.fragment.SettingsFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_settings"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:title="@string/settings"
        app:titleTextAppearance="@style/TextHeaderActivity"/>


    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/themeSwitcher"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_frame_layout_height"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="16dp"

        app:trackTint="@color/switch_track_color"
        app:thumbTint="@color/switch_thumb_color"

        style="@style/TextActivitySettings"
        android:text="@string/dark_team"/>

    <TextView
        android:id="@+id/share_the_app"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_frame_layout_height"
        android:layout_marginHorizontal="16dp"

        style="@style/TextActivitySettings"
        android:text="@string/share_the_app"
        android:gravity="center|start"

        app:drawableEndCompat="@drawable/vector_share"/>

    <TextView
        android:id="@+id/write_to_support"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_frame_layout_height"
        android:layout_marginHorizontal="16dp"

        style="@style/TextActivitySettings"
        android:text="@string/write_to_support"
        android:gravity="center|start"

        app:drawableEndCompat="@drawable/vector_support"/>

    <TextView
        android:id="@+id/user_agreement"
        android:layout_width="match_parent"
        android:layout_height="@dimen/settings_frame_layout_height"
        android:layout_marginHorizontal="16dp"

        style="@style/TextActivitySettings"
        android:text="@string/user_agreement"
        android:gravity="center|start"

        app:drawableEndCompat="@drawable/vector_arrow_forward"/>


</LinearLayout>
