<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    style="@style/LinearLayoutMain"
    android:paddingHorizontal="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"

        android:gravity="center_vertical|start"
        android:text="@string/title"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="@color/white"
        android:textSize="@dimen/title_size" />

    <Button
        android:id="@+id/button_search"
        style="@style/ButtonActivityMain"
        android:layout_marginTop="24dp"
        android:text="@string/search"
        app:icon="@drawable/vector_loupe"/>


    <Button
        android:id="@+id/button_media_library"
        style="@style/ButtonActivityMain"
        android:layout_marginTop="@dimen/margin_button"
        android:text="@string/media_library"
        app:icon="@drawable/vector_media"/>

    <Button
        android:id="@+id/button_settings"
        style="@style/ButtonActivityMain"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/margin_button"
        android:layout_marginBottom="24dp"
        android:text="@string/options"
        app:icon="@drawable/vector_options"/>

</LinearLayout>
