<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    style="@style/LinearLayout"
    android:paddingStart="16dp"
    android:paddingEnd="@null">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal">

        <TextView
            style="@style/TextHeadertActivitySettings"
            android:text="@string/options"/>
    </LinearLayout>

    <FrameLayout
        style="@style/FrameLayoutActivitySettings"
        android:layout_marginTop="24dp">

        <TextView
            style="@style/TextActivitySettings"
            android:text="@string/dark_team"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="12dp"

            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </FrameLayout>

    <FrameLayout
        style="@style/FrameLayoutActivitySettings">

        <TextView
            style="@style/TextActivitySettings"
            android:text="@string/share_the_app"/>

        <ImageView
            android:id="@+id/image_share"
            style="@style/ImageActivitySettings"
            android:layout_marginEnd="20dp"
            android:src="@drawable/vector_share"
            android:contentDescription="@null"/>
    </FrameLayout>

    <FrameLayout
        style="@style/FrameLayoutActivitySettings">

        <TextView
            style="@style/TextActivitySettings"
            android:text="@string/write_to_support"/>

        <ImageView
            android:id="@+id/image_support"
            style="@style/ImageActivitySettings"
            android:layout_marginEnd="16dp"
            android:src="@drawable/vector_support"
            android:contentDescription="@null"/>
    </FrameLayout>


    <FrameLayout
        style="@style/FrameLayoutActivitySettings">

        <TextView
            style="@style/TextActivitySettings"
            android:text="@string/user_agreement"/>

        <ImageView
            android:id="@+id/image_user_agreement"
            style="@style/ImageActivitySettings"
            android:layout_marginEnd="24dp"
            android:src="@drawable/vector_arrow_forward"
            android:contentDescription="@null"/>
    </FrameLayout>

</LinearLayout>
