<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container_playlist_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".medialibrary.ui.fragment.PlayListInfoFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yp_gray_light">


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_playlist_info"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:elevation="4dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/poster"
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:contentDescription="@null"
            android:scaleType="centerCrop"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            tools:src="@drawable/album" />

        <!--        <ImageButton-->
        <!--            style="@style/BackImageStyle"-->
        <!--            android:id="@+id/buttonBack"-->
        <!--            android:layout_width="48dp"-->
        <!--            android:layout_height="48dp"-->
        <!--            android:layout_marginStart="4dp"-->
        <!--            android:layout_marginTop="4dp"-->
        <!--            android:contentDescription="@string/back_description"-->

        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toTopOf="parent" />-->

        <TextView
            android:id="@+id/playlistTitle"
            style="@style/PlaylistTitleDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"

            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/leftBorder"
            app:layout_constraintTop_toBottomOf="@+id/poster"

            tools:text="Best songs 2021" />

        <TextView
            android:id="@+id/playlistDescription"
            style="@style/PlaylistDescriptionDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="@+id/leftBorder"
            app:layout_constraintTop_toBottomOf="@+id/playlistTitle"

            tools:text="2022" />

        <TextView
            android:id="@+id/playlistTimeTotal"
            style="@style/PlaylistDescriptionDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"

            app:layout_constraintEnd_toStartOf="@id/playlistCountTotal"
            app:layout_constraintStart_toStartOf="@+id/leftBorder"
            app:layout_constraintTop_toBottomOf="@+id/playlistDescription"

            tools:text="300 минут" />

        <TextView
            android:id="@+id/playlistCountTotal"
            style="@style/PlaylistDescriptionDetailWithDot"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:drawablePadding="5dp"


            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/playlistTimeTotal"
            app:layout_constraintTop_toTopOf="@+id/playlistTimeTotal"

            tools:text="98 треков" />

        <TextView
            android:id="@+id/share"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="16dp"

            app:drawableEndCompat="@drawable/ic_share_24"
            app:drawableTint="@color/yp_black"
            app:layout_constraintStart_toStartOf="@+id/leftBorder"
            app:layout_constraintTop_toBottomOf="@+id/playlistTimeTotal" />

        <TextView
            android:id="@+id/menu"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"

            app:drawableEndCompat="@drawable/ic_menu"
            app:drawableTint="@color/yp_black"
            app:layout_constraintStart_toEndOf="@+id/share"
            app:layout_constraintTop_toBottomOf="@+id/playlistTimeTotal"
            app:layout_constraintTop_toTopOf="@id/share" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/yp_background"
        android:visibility="gone" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_width="@dimen/search_progress_bar_layout_width_height"
        android:layout_height="@dimen/search_progress_bar_layout_width_height"
        android:layout_gravity="center"
        android:layout_marginTop="148dp"
        android:indeterminate="true"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/bottom_sheet_track"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_bottom_sheet_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="8dp"

        app:behavior_hideable="false"
        app:behavior_peekHeight="232dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <LinearLayout
            android:id="@+id/playlistContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <View
                android:id="@+id/drag_handle"
                android:layout_width="50dp"
                android:layout_height="4dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/ic_rectangle_50_4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/playlistTracks"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="24dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"

                tools:itemCount="3"
                tools:listitem="@layout/track_view" />

        </LinearLayout>

        <TextView
            android:id="@+id/emptyPlaylist"
            style="@style/ErrorTextRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/empty_playlist"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout

        android:id="@+id/bottom_sheet_menu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/ic_bottom_sheet_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="8dp"

        app:behavior_hideable="true"
        app:behavior_peekHeight="320dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <View
            android:id="@+id/drag_handle_1"
            android:layout_width="50dp"
            android:layout_height="4dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_rectangle_50_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            android:paddingHorizontal="14dp"
            android:paddingVertical="8dp">

            <ImageView
                android:id="@+id/posterBottomSheet"
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/album" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/poster_title"
                    style="@style/TitlePlayerPlaylist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:ellipsize="end"
                    android:maxLines="1"
                    tools:text="Best of the Best" />

                <TextView
                    android:id="@+id/track_count"
                    style="@style/CountPlayerPlaylist"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    tools:text="98 треков" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/shareBtn"
            style="@style/SettingsButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/playlist_detail_share" />

        <TextView
            android:id="@+id/editBtn"
            style="@style/SettingsButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playlist_detail_edit" />

        <TextView
            android:id="@+id/removeBtn"
            style="@style/SettingsButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playlist_detail_remove" />

        <TextView
            android:id="@+id/playlist_empty_tracks"
            style="@style/ErrorTextRequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/playlist_empty_tracks"
            android:visibility="gone" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>